dictionary API added and all functions added

--- a/style.css
+++ b/style.css
@@ -63,3 +63,13 @@ section.data p.def{
     color: #2D3748;
     line-height: 1.6;
 }
+
+.suggested{
+    background: #8794F4;
+    color: #fff;
+    padding:2px 10px;
+    border-radius: 4px;
+    margin-right: 10px;
+    margin-top: 5px;
+    display: inline-block;
+}
