--- a/style.css
+++ b/style.css
@@ -7,8 +7,7 @@ body{
     min-height: 100vh;
 }
 .container{
-    width: 1152px;
-    max-width: 90%;
+    width: 100%;
     margin: 0 auto;
 }
 
@@ -16,7 +15,9 @@ nav{
     background: #553C9A;
     padding: 1rem 0;
     color: #fff;
+    padding: 10px;
 }
+
 section.input{
     padding: 100px;
 }
@@ -37,8 +38,8 @@ h2{
 input{
     border: none;
     padding: 10px;
+    width: 100%;
     font-size: 16px;
-    min-width: 400px;
     outline: none;
 }
 button{
@@ -52,7 +53,6 @@ button{
 section.data{
     max-width: 600px;
     margin: 0 auto;
-    margin-top: 20px;
     text-align: center;
 }
 .loading{
